--- a/bluestyle.css
+++ b/bluestyle.css
@@ -1,8 +1,13 @@
 body {
     background-color: lightblue;
+    text-align: center;
 }
 
 h1 {
     color: navy;
     margin-left: 20px;
+}
+
+img {
+    width: 25%;
 }
